# comfyui_gprompts

./: LICENSE  README.md  __init__.py  comfyui_gprompts.py  immich_importer.py  pyproject.toml
.github/workflows/: publish.yml
js/: comfyui_gprompts.js
sample_wildcards/: readme.txt
sample_wildcards/wildcards/: artists1.txt  baroque.txt  hair_color.txt  hair_styles_misc.txt  mix1.txt  roman_weapon.json  styles1.txt  utensil.json
web/docs/: GPrompts.md  StringFormatter.md
web/js/: gadzoinks.js  utils_dom.js
