[project]
name = "gprompts"
description = "Another dynamic prompts node, designed to be easy to use and support wildcards"
version = "2.1.0"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/GadzoinksOfficial/comfyui_gprompts"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gadzoinksofficial"
DisplayName = "comfyui_gprompts"
Icon = ""
