[project]
name = "gprompts"
description = "Node Pack. Includes GPrompts - Another dynamic prompts node, designed to be easy to use and support wildcards; String Formatter; Save image with notes; and save image to Immich Server"
version = "2.2.0"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/GadzoinksOfficial/comfyui_gprompts"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gadzoinksofficial"
DisplayName = "comfyui_gprompts"
Icon = ""

